Barra superior parte 1

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Ola Moovie</h1>
-    <h2>Ola moovie</h2>
-    <h3>Ola moovie</h3>
+    <header>
+        <nav class="container">
+            <h1>DSmovie</h1>
+            <a href="https://github.com/KawanMN">/KawanMN</a>
+        </nav>
+    </header>
 </body>
 </html>
