--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
             </div>
        </nav>
     </header>
+
+    <main>
+       <section id="dsmovie-card-list" class="container">
+
+         <div class="dsmovie-card">
+            <img src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/gtiNyP9BoQmPzjeDhvofUtUxpJV.jpg" alt="The Seven Deadly Sins: Cursed by Light">
+            <div class="dsmovie-card-description">
+                <h3>The Seven Deadly Sins: Cursed by Light</h3>
+                <a class="dsmoviebtn" href="form.html">Avaliar</a>
+            </div>
+        </div>
+
+       </section>
+    </main>
+
 </body>
 
 </html>
